--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "name": "emi",
   "version": "1.0.0",
   "main": "app.js",
+  "engines": {
+    "node": "20.x"
+  },
   "devDependencies": {},
   "scripts": {
     "start": "node app.js",
