--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   },
   "name": "emi",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "engines": {
     "node": "18.x"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
